Fixed previously broken css, fixed hero z-indexing, added margins to project div to stop window from expanding and shrinking with cabinets, labels only tabbable when cabinet is open, when screen is too small for multiple cabinets only one will be open at a time

--- a/style.css
+++ b/style.css
@@ -33,9 +33,14 @@ body {
 #hero {
   background-color: #c1c1f0;
   margin: 0px;
-  z-index: 1;
-  width: 100%;
+  position: relative;
+  z-index: 14;
+  width: 100vw;
   height: 100vh;
+}
+
+#footer {
+  height:20px;
 }
 /* End Hero section */
 
@@ -124,7 +129,7 @@ body {
   height: 10px;
   width:200px;
   position: relative;
-  top:-70px;
+  top:-40px;
   left: -10px;
 }
 
@@ -132,10 +137,10 @@ body {
   background-color: grey;
   
   box-shadow: var(--cabinet-label-shadow) 5px 0px 5px;
-  height: 62px;
+  height: 72px;
   width:10px;
   position: relative;
-  top:-70px;
+  top:-40px;
   left: -10px;
   z-index: 2;
 }
@@ -146,16 +151,16 @@ body {
   height:10px;
   width: 200px;
   position: relative;
-  top: -70px;
+  top: -40px;
   left: -10px;
 }
 .cabinet-front-label-right {
   background-color: grey;
   
-  height: 62px;
+  height: 72px;
   width:10px;
   position: relative;
-  top:-142px;
+  top:-122px;
   left: 180px;
   z-index: 2;
 }
@@ -163,9 +168,9 @@ body {
 .cabinet-front-label-connecting-box-shadow {
   box-shadow: var(--cabinet-label-shadow) 5px 5px 5px;
   height: 82px;
-  width: 200px;
+  width: 200px;                                      
   position:relative;
-  top:-214px;
+  top:-194px;
   left: -10px
 }
 
@@ -419,6 +424,8 @@ body {
   flex-wrap: wrap;
   justify-content: space-evenly;
   z-index: 0;
+  margin-top: 60px;
+  margin-bottom: 450px;
 }
 @media(max-width: 1067px){
   .cabinet-divider {
